<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>

    <string name="add_task">Add Task</string>
    <string name="durations_report">Durations Report</string>
    <string name="settings">Settings</string>
    <string name="about">About TaskTimer</string>
    <string name="generate_data">Generate Data</string>
    <string name="no_task_selected">No Task Being Timed</string>
    <string name="edit_image">Button to edit task details</string>
    <string name="delete_image">Button to delete a task</string>
    <string name="add_edit_name_hint">Task name [required]</string>
    <string name="add_edit_desc_hint">Task description [optional]</string>
    <string name="add_edit_order_hint">Priority: low to high [optional]</string>
    <string name="save">Save</string>

    <string name="instructions_title">Instructions</string>
    <string name="instructions_text">Use the add button (+) in the toolbar above to create new tasks.\n\nTasks with lower sort orders will be placed higher up the list. Tasks with the same sort order will be sorted alphabetically.\n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed).\n\nEach task has Edit and Delete buttons if you want to change the details or remove the task.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Okay</string>
    <string name="delete_dialog_btn">Delete</string>
    <string name="delete_dialog_message">Deleting this task will also delete all timing data associated with Task ID %1$d: %2$s</string>
    <string name="dialog_abandon_changes_btn">Abandon changes</string>
    <string name="dialog_cont_editing">Continue Editing</string>
    <string name="dialog_confirm_exit_message">You have unsaved changes. Are you sure you want to abandon your changes?</string>
    <string name="about_copyright">Copyright © 2019 learnprogramming.academy</string>
    <string name="about_weblink">Instructions available at www.learnprogramming.academy</string>
    <string name="about_email">For Support, email tasktimer@learnprogramming.academy</string>
    <string name="about_credits">Icon derived from <b>analog clock</b> at openclipart.org by <b>Anonymous</b></string>
    <string name="current_timing_message">Currently timing %1$s</string>
    <string name="view_task_name">Task Name</string>
    <string name="view_task_start_date">Date</string>
    <string name="view_task_duration">Duration</string>
    <string name="view_task_description">Description</string>
</resources>