<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_large"
    android:paddingBottom="@dimen/padding_large">

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        tools:text="1.0.0" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/padding"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/about_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/about_copyright"
        android:textColor="@color/black"
        android:textSize="@dimen/text" />

    <TextView
        android:id="@+id/about_weblink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:autoLink="web"
        android:text="@string/about_weblink"
        android:textColor="@color/black"
        android:textSize="@dimen/text" />

    <TextView
        android:id="@+id/about_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:autoLink="email"
        android:text="@string/about_email"
        android:textColor="@color/black"
        android:textSize="@dimen/text" />

    <TextView
        android:id="@+id/about_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/about_credits"
        android:textColor="@color/black"
        android:textSize="@dimen/text" />

</LinearLayout>