<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/task_durations">

    <TextView
        android:id="@+id/txtViewTaskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_small"
        android:layout_marginEnd="@dimen/padding_small"
        android:padding="@dimen/padding_small"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/txtViewStartTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/view_task_name" />

    <TextView
        android:id="@+id/txtViewStartTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_small"
        android:layout_marginEnd="@dimen/padding_small"
        android:padding="@dimen/padding_small"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@id/txtViewTaskName"
        app:layout_constraintEnd_toStartOf="@id/txtViewDuration"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/txtViewTaskName"
        tools:text="@string/view_task_start_date" />

    <TextView
        android:id="@+id/txtViewDuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_small"
        android:layout_marginEnd="@dimen/padding_small"
        android:padding="@dimen/padding_small"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@id/txtViewStartTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/txtViewStartTime"
        tools:text="@string/view_task_duration" />

</androidx.constraintlayout.widget.ConstraintLayout>